[build-system]
requires = [ "setuptools>=61.0" ]
build-backend = "setuptools.build_meta"


[project]
name = "flysystem"
version = "0.1.0"
description = "Abstraction for local and remote filesystems"
readme = "README.md"
keywords = [ "filesystem", "storage", "fs", "s3", "cloud-storage" ]
authors = [
    { name = "Oanh Nguyen", email = "oanhnn.bk@gmail.com" },
]
maintainers = [
    { name = "Rabiloo Developers", email = "oss@rabiloo.com" },
]
license = {text = "The MIT License"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
]
dependencies = [
    "boto3"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "flake8-pyproject",
    "pytest",
    "typing_extensions"
]

[project.urls]
"Homepage" = "https://github.com/rabiloo/python-flysystem"
"Repository" = "https://github.com/rabiloo/python-flysystem"
"Bug Tracker" = "https://github.com/rabiloo/python-flysystem/issues"


[tool.flake8]
count = true
max-complexity = 10
max-line-length = 120
statistics = true
ignore = ["W503"]


[tool.black]
target-version = ["py310"]
line-length = 120


[tool.isort]
profile = "black"
lines_between_types = 1
line_length = 120
